kubernetes/db/elasticsearch/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  namespace: database
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: authentik-forward-auth@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - kibana.anilsezer.net
      secretName: kibana-tls
  rules:
    - host: kibana.anilsezer.net
      http:
        paths:
          - backend:
              service:
                name: kibana-kb-http
                port:
                  number: 5601
            path: /
            pathType: Prefix
